# virus-research

./: .gitignore  CMakeLists.txt  DihedralGroupOnSix.cpp  DihedralGroupOnSix.hpp  DihedralGroupOnTen.cpp  DihedralGroupOnTen.hpp  EigenTypes.hpp  GeneratingVectorsForViruses.cpp  GeneratingVectorsForViruses.hpp  IcosahedralGroup.cpp  IcosahedralGroup.hpp  Matrix6fFileReader.cpp  Matrix6fFileReader.hpp  Matrix6fGroup.cpp  Matrix6fGroup.hpp  MatrixFunctions.cpp  MatrixFunctions.hpp  PermutationGroup.cpp  PermutationGroup.hpp  README.md  TetrahedralGroup.cpp  TetrahedralGroup.hpp  float_functions.cpp  float_functions.hpp  outputResults.cpp  outputResults.hpp  printOutputResults.cpp  sampling.cpp  std_vector_functions.cpp  std_vector_functions.hpp  virus.cpp
